2009-03-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#105933 Only close controls of thumbnails are shown in the switcher
	          view and when tapped on them desktop is crashing in a
		  mentioned scenario

	Caused by extra unexpected MapNotify:es.

	* matchbox/core/mb-wm-client.h:
	  Add a skip_maps counter to MBWindowManagerClient.
	* matchbox/core/mb-window-manager.c (mb_wm_handle_map_notify):
	  Ignore a MapNotify when we ignore an UnmapNotify due to
	  window reparenting.  Also ignore MapNotify:es sent because
	  of compositing.

	This will break ABI so be sure to recompile hildon-desktop
	with the changed header.

2009-03-17  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* Revert Thomas' transient for handling change.
	* Revert Adam's override stacking change and use the original,
	commented out code instead.

2009-03-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Regression fix: stack override-redirect windows where they belong.
	Otherwise these clients are left where they happen to be by
	mb_wm_stack_ensure().

	* matchbox/core/mb-wm-client-base.h
	* matchbox/core/mb-wm-client-base.c:
	  Export mb_wm_client_base_stack().
	* matchbox/client-types/mb-wm-client-override.c:
	  Use it for MBWMClientOverride.

2009-03-16  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Fixes: NB#103836 (or at least its test case).
	
	* matchbox/core/mb-wm-client.c: When a window is unmapped,
	don't also unmap its transients.  Instead, make them
	intransient and issue a warning.

2009-03-13  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Add new _HILDON_WM_NAME property which can be used to name
	a window and include markup (if you want to have italics
	or whatever in your window names).

	Fixes: NB#105404.

	* matchbox/core/mb-window-manager.c:
	* matchbox/core/mb-wm-atoms.c:
	* matchbox/core/mb-wm-client-window.c:
	* matchbox/core/mb-wm-types.h:

2009-03-13  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Hide some symbols.
