@@ -48,7 +48,4 @@ MBWMClientBaseClass;
 int
 mb_wm_client_base_class_type ();
 
-/** A nasty hack to work around linking issues. */
-void base_foo(void);
-
 #endif
